<resources>
    <!-- _____________ 편집 문구 _____________ -->
    <string name="main_change"> 대표 사진 변경</string>
    <string name="focus"> 사진 초점 변경</string>

    <string name="choice_button"> &#160;&#160;Best 사진 추천&#160; </string>
    <string name="rewind"> &#160;&#160;Face Blending&#160; </string>
    <string name="magicPicture"> &#160;&#160;매직픽쳐 생성&#160; </string>
    <string name="focus_change"> &#160;&#160;사진 초점 변경&#160; </string>

    <string name="in_focus">사진 초점 변경</string>
    <string name="in_add">컨텐츠 추가</string>
    <string name="audio_add">Audio 추가</string>
    <string name="text_add">Text 추가</string>
    <string name="extract_jpeg">단일 사진 저장</string>

    <string name="auto_option">Auto Face Blending</string>

    <string name="basic_mode_option">사진 확인</string>
    <string name="recommendation_image">Best 추천\n사진입니다.</string>

    <string name="save_text">저장</string>
    <string name="edit_text">편집</string>
    <string name="cancle_text">취소</string>

    <string name="face_save">수정</string>
    <string name="face_cancle">취소</string>

    <string name="best_choice_animation">추천 완료</string>
    <string name="face_blending_animation">최적의 블랙딩 사진 완료</string>
    <!-- ____________________________________ -->

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="app_name">OnePIC</string>

    <string name="basic_option">Basic</string>
    <string name="object_focus_option">Object Focus</string>
    <string name="distance_focus_option">Distance Focus</string>
    <string name="auto_rewind_option">Auto Rewind</string>
    <string name="burst_mode_edit">Burst Mode</string>
    <string name="basic_mode_edit">Basic Mode</string>

    <string name="basic_mode">기본</string>
    <string name="burst_mode">연속 촬영</string>
    <string name="object_mode">객체별\n초점 촬영</string>
    <string name="distance_mode">거리별\n초점 촬영</string>

    <string name="camera_burst_info">5장 연속 촬영</string>
    <string name="camera_object_info">인식된 객체에 각각 초점이 맞는 사진 촬영</string>
    <string name="camera_distance_info">가까운 곳부터 먼 곳까지 초점이 맞는 사진 촬영</string>
    <string name="camera_success_info">촬영 완료</string>
    <string name="camera_object_detection_failed">촬영할 객체가 없습니다.</string>

    <string name="burst1">3</string>
    <string name="burst2">5</string>
    <string name="burst3">7</string>
    <string name="burst1_info">3장 연속 촬영</string>
    <string name="burst2_info">5장 연속 촬영</string>
    <string name="burst3_info">7장 연속 촬영</string>

    <string name="loading_text">얼굴 인식 중 입니다</string>

</resources>