<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topMenu"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/white">

        <TextView
            android:id="@+id/onePicLogoTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/abril_fatface"
            android:text="@string/app_name"
            android:textColor="@color/dark_purple"
            android:textSize="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/topMenuVer2"
            app:layout_constraintStart_toStartOf="@+id/topMenuVer1"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/topMenuVer1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.33" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/topMenuVer2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.66" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="3:4"
        app:layout_constraintTop_toBottomOf="@id/topMenu"
        app:layout_constraintBottom_toTopOf="@id/bottomMenu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.camera.view.PreviewView
                android:id="@+id/viewFinder"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:scaleType="fitStart"/>

            <com.example.test_camera2.CameraHelper.AutoFitTexutreView
                android:id="@+id/textureView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <com.goldenratio.onepic.CameraModule.OverlayView
                android:id="@+id/overlay"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:visibility="gone"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/infoConstraintLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/camera_info_rounded"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/frameLayout_hor1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/frameLayout_hor2">

                <TextView
                    android:id="@+id/infoTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:text="@string/camera_burst_info"
                    app:layout_constraintStart_toStartOf="@id/infoConstraintLayout_ver1"
                    app:layout_constraintEnd_toStartOf="@id/infoCloseBtn"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <ImageButton
                    android:id="@+id/infoCloseBtn"
                    android:layout_width="35dp"
                    android:layout_height="29dp"
                    android:backgroundTint="@color/transparent_color"
                    android:scaleType="fitCenter"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/infoTextView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:srcCompat="@drawable/close_icon"
                    app:tint="@color/white" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/infoConstraintLayout_ver1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.1" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/infoConstraintLayout_ver2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.9" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@color/middle_gray_30"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/frameLayout_hor3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />

            <HorizontalScrollView
                android:id="@+id/horizontalScrollView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scrollbars="none"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/frameLayout_hor3"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:ignore="MissingConstraints">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioGroup
                        android:id="@+id/modeRadioGroup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_gravity="center"
                        android:gravity="center">

                        <RadioButton
                            android:id="@+id/basicRadioBtn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="10dp"
                            android:button="@drawable/null_radio_button"
                            android:checked="true"
                            android:gravity="center"
                            android:paddingHorizontal="8dp"
                            android:stateListAnimator="@null"
                            android:textSize="12sp"
                            android:textColor="@drawable/radio_text_selector"
                            android:text="@string/basic_mode"
                            android:lines="2"
                            android:maxLines="2"/>

                        <RadioButton
                            android:id="@+id/burstRadioBtn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="10dp"
                            android:button="@drawable/null_radio_button"
                            android:gravity="center"
                            android:paddingHorizontal="8dp"
                            android:stateListAnimator="@null"
                            android:textSize="12sp"
                            android:textColor="@drawable/radio_text_selector"
                            android:text="@string/burst_mode"
                            android:lines="2"
                            android:maxLines="2"/>

                        <RadioButton
                            android:id="@+id/objectFocusRadioBtn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="10dp"
                            android:button="@drawable/null_radio_button"
                            android:gravity="center"
                            android:paddingHorizontal="8dp"
                            android:stateListAnimator="@null"
                            android:textSize="12sp"
                            android:textColor="@drawable/radio_text_selector"
                            android:text="@string/object_mode"
                            android:lines="2"
                            android:maxLines="2"/>

                        <RadioButton
                            android:id="@+id/distanceFocusRadioBtn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="10dp"
                            android:button="@drawable/null_radio_button"
                            android:gravity="center"
                            android:paddingHorizontal="8dp"
                            android:stateListAnimator="@null"
                            android:textSize="12sp"
                            android:text="@string/distance_mode"
                            android:textColor="@drawable/radio_text_selector"
                            android:lines="2"
                            android:maxLines="2"/>

                    </RadioGroup>

                </LinearLayout>

            </HorizontalScrollView>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/frameLayout_hor1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.02" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/frameLayout_hor2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.1" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/frameLayout_hor3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.9" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/frameLayout_ver1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.27" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/frameLayout_ver2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.73" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/white">

<!--        <HorizontalScrollView-->
<!--            android:id="@+id/horizontalScrollView"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:scrollbars="none"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="@id/bottomMenu"-->
<!--            app:layout_constraintBottom_toTopOf="@+id/shutterBtn"-->
<!--            tools:ignore="MissingConstraints">-->

<!--            <LinearLayout-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:orientation="vertical">-->

<!--                <RadioGroup-->
<!--                    android:id="@+id/modeRadioGroup"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:orientation="horizontal"-->
<!--                    android:layout_gravity="center">-->

<!--                    <RadioButton-->
<!--                        android:id="@+id/burstRadioBtn"-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:layout_marginHorizontal="10dp"-->
<!--                        android:button="@drawable/null_radio_button"-->
<!--                        android:checked="true"-->
<!--                        android:gravity="center"-->
<!--                        android:paddingHorizontal="8dp"-->
<!--                        android:stateListAnimator="@null"-->
<!--                        android:textSize="13sp"-->
<!--                        android:textColor="@drawable/radio_text_selector"-->
<!--                        android:text="@string/burst_mode"-->
<!--                        android:lines="2"-->
<!--                        android:maxLines="2"/>-->

<!--                    <RadioButton-->
<!--                        android:id="@+id/objectFocusRadioBtn"-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:layout_marginHorizontal="10dp"-->
<!--                        android:button="@drawable/null_radio_button"-->
<!--                        android:gravity="center"-->
<!--                        android:paddingHorizontal="8dp"-->
<!--                        android:stateListAnimator="@null"-->
<!--                        android:textSize="13sp"-->
<!--                        android:textColor="@drawable/radio_text_selector"-->
<!--                        android:text="@string/object_mode"-->
<!--                        android:lines="2"-->
<!--                        android:maxLines="2"/>-->

<!--                    <RadioButton-->
<!--                        android:id="@+id/distanceFocusRadioBtn"-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:layout_marginHorizontal="10dp"-->
<!--                        android:button="@drawable/null_radio_button"-->
<!--                        android:gravity="center"-->
<!--                        android:paddingHorizontal="8dp"-->
<!--                        android:stateListAnimator="@null"-->
<!--                        android:textSize="13sp"-->
<!--                        android:text="@string/distance_mode"-->
<!--                        android:textColor="@drawable/radio_text_selector"-->
<!--                        android:lines="2"-->
<!--                        android:maxLines="2"/>-->

<!--                </RadioGroup>-->

<!--            </LinearLayout>-->

<!--        </HorizontalScrollView>-->

        <ImageView
            android:id="@+id/galleryBtn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:srcCompat="@drawable/camera_gallery_icon"
            app:tint="@color/middle_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/bottomMenu_ver1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bottomMenu_hor1"
            tools:ignore="SpeakableTextPresentCheck"/>

        <ImageView
            android:id="@+id/shutterBtn"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/camera_shutter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/bottomMenu_ver2"
            app:layout_constraintStart_toStartOf="@+id/bottomMenu_ver1"
            app:layout_constraintTop_toBottomOf="@+id/bottomMenu_hor1" />

        <ImageView
            android:id="@+id/convertBtn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:srcCompat="@drawable/repost"
            app:tint="@color/middle_gray"
            app:layout_constraintStart_toEndOf="@id/bottomMenu_ver2"
            app:layout_constraintTop_toBottomOf="@+id/bottomMenu_hor1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/bottomMenu_hor1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.2" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/bottomMenu_ver1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.33" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/bottomMenu_ver2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.66" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>